added analytics code

--- a/pantheon2023/index.html
+++ b/pantheon2023/index.html
@@ -18,6 +18,8 @@
     <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
+    <!-- Code for analytics -->
+    <script async src="https://umami-iwpy.onrender.com/script.js" data-website-id="d0b42666-901b-43c9-8ef2-7c5a806e782f"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" data-rh="true" />
     <title>Pantheon 2023 | RNSIT</title>
   </head>
