--- a/pantheon2023/index.html
+++ b/pantheon2023/index.html
@@ -21,7 +21,7 @@
     <!-- Code for analytics -->
     <script async src="https://umami-iwpy.onrender.com/script.js" data-website-id="d0b42666-901b-43c9-8ef2-7c5a806e782f"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" data-rh="true" />`
-    <meta property="og:image" content="./OG.png" />
+    <meta property="og:image" content="https://www.pantheon2023.live/OG.png" />
     <title>Pantheon 2023 | RNSIT</title>
   </head>
   <body>
