added google search console tag

--- a/pantheon2023/index.html
+++ b/pantheon2023/index.html
@@ -21,6 +21,8 @@
     <!-- Code for analytics -->
     <script async src="https://umami-iwpy.onrender.com/script.js" data-website-id="d0b42666-901b-43c9-8ef2-7c5a806e782f"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" data-rh="true" />
+    <!-- Google Search Console tag -->
+    <meta name="google-site-verification" content="nei7CZx6h3vYWBUnNeyUP8znsnxyza1EhqwOiFltx3o" />
     <meta property="og:image" content="https://www.pantheon2023.live/OG.png" />
     <title>Pantheon 2023 | RNSIT</title>
   </head>
